# gif-slim

./: .gitignore  CMakeLists.txt  GifEditor.pro  GifSlim.pro  README.md  build.sh  build_and_run.sh  package-linux.sh  package-macos.sh  package-windows.sh  run.sh  write_gif.py
.github/: copilot-instructions.md
.github/workflows/: package.yml
packaging/linux/: gif-editor.desktop  gif-slim.desktop
packaging/windows/: GifEditor.iss  GifSlim.iss
src/: cli.cpp  cli.h  editor_panel.cpp  editor_panel.h  gif_reader.cpp  gif_reader.h  gif_writer.cpp  gif_writer.h  main.cpp  mainwindow.cpp  mainwindow.h  optimizer.cpp  optimizer.h  player_widget.cpp  player_widget.h  range_slider.cpp  range_slider.h
